all categories - top and bottom values added

--- a/GI and GL - webscraping.ipynb
+++ b/GI and GL - webscraping.ipynb
@@ -22350,20 +22350,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 181,
    "id": "014a2173-9a91-4cb0-816f-50ca5ac6e304",
    "metadata": {},
    "outputs": [],
    "source": [
-    "top10_GI_all = df_all_categories.nlargest(10, 'GI')\n",
-    "top10_GL_all = df_all_categories.nlargest(10, 'GL')\n",
+    "top10_GI_all = df_all_categories.nlargest(8, 'GI')\n",
+    "top10_GL_all = df_all_categories.nlargest(8, 'GL')\n",
     "\n",
     "top10GI_and_GL_all = pd.concat([top10_GI_all, top10_GL_all]).drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 183,
    "id": "02d741a8-8e0c-4c5f-9110-7a39c4e177b0",
    "metadata": {},
    "outputs": [
@@ -22470,24 +22470,6 @@
        "      <td>Grains</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>Rice flour</td>\n",
-       "      <td>95</td>\n",
-       "      <td>76.1</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Grains</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>526</th>\n",
-       "      <td>Baked potato</td>\n",
-       "      <td>95</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Vegetables</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>573</th>\n",
        "      <td>Maltodextrin</td>\n",
        "      <td>95</td>\n",
@@ -22505,15 +22487,6 @@
        "      <td>High</td>\n",
        "      <td>Sweets</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>582</th>\n",
-       "      <td>Tapioca (dried)</td>\n",
-       "      <td>85</td>\n",
-       "      <td>74.6</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Other foods</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -22528,11 +22501,8 @@
        "476                         Glucose   96  94.1        High        High   \n",
        "0                  Baguette (white)   95  46.5        High        High   \n",
        "227           Potato flour (starch)   95  78.9        High        High   \n",
-       "266                      Rice flour   95  76.1        High        High   \n",
-       "526                    Baked potato   95  20.0        High        High   \n",
        "573                    Maltodextrin   95  94.0        High        High   \n",
        "494  Air rice (analogue of popcorn)   85  76.3        High        High   \n",
-       "582                 Tapioca (dried)   85  74.6        High        High   \n",
        "\n",
        "           Category  \n",
        "484          Sweets  \n",
@@ -22543,14 +22513,11 @@
        "476          Sweets  \n",
        "0    Baked products  \n",
        "227          Grains  \n",
-       "266          Grains  \n",
-       "526      Vegetables  \n",
        "573     Other foods  \n",
-       "494          Sweets  \n",
-       "582     Other foods  "
+       "494          Sweets  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22561,17 +22528,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 185,
    "id": "40dd2ca9-a1f9-49ab-ac3b-f494bcc4ce10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([484, 477, 498, 501, 502, 476, 0, 227, 266, 526, 573, 494, 582], dtype='int64')"
+       "Index([484, 477, 498, 501, 502, 476, 0, 227, 573, 494], dtype='int64')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22582,7 +22549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 187,
    "id": "0572a1f2-9f9f-4a78-a51d-476585ab88f9",
    "metadata": {},
    "outputs": [
@@ -22690,15 +22657,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Rice flour</td>\n",
-       "      <td>95</td>\n",
-       "      <td>76.1</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Grains</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
        "      <td>Baguette (white)</td>\n",
        "      <td>95</td>\n",
        "      <td>46.5</td>\n",
@@ -22707,31 +22665,13 @@
        "      <td>Baked products</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Baked potato</td>\n",
-       "      <td>95</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Vegetables</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>10</th>\n",
        "      <td>Air rice (analogue of popcorn)</td>\n",
        "      <td>85</td>\n",
        "      <td>76.3</td>\n",
        "      <td>High</td>\n",
        "      <td>High</td>\n",
        "      <td>Sweets</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Tapioca (dried)</td>\n",
-       "      <td>85</td>\n",
-       "      <td>74.6</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Other foods</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -22747,11 +22687,8 @@
        "6                          Glucose   96  94.1        High        High   \n",
        "7                     Maltodextrin   95  94.0        High        High   \n",
        "8            Potato flour (starch)   95  78.9        High        High   \n",
-       "9                       Rice flour   95  76.1        High        High   \n",
-       "10                Baguette (white)   95  46.5        High        High   \n",
-       "11                    Baked potato   95  20.0        High        High   \n",
-       "12  Air rice (analogue of popcorn)   85  76.3        High        High   \n",
-       "13                 Tapioca (dried)   85  74.6        High        High   \n",
+       "9                 Baguette (white)   95  46.5        High        High   \n",
+       "10  Air rice (analogue of popcorn)   85  76.3        High        High   \n",
        "\n",
        "          Category  \n",
        "1           Sweets  \n",
@@ -22762,14 +22699,11 @@
        "6           Sweets  \n",
        "7      Other foods  \n",
        "8           Grains  \n",
-       "9           Grains  \n",
-       "10  Baked products  \n",
-       "11      Vegetables  \n",
-       "12          Sweets  \n",
-       "13     Other foods  "
+       "9   Baked products  \n",
+       "10          Sweets  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22783,8 +22717,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "id": "ee43407a-7fed-4175-a6ce-10ec73fbfa96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bottom10_GI_all = df_all_categories.nsmallest(7, 'GI')\n",
+    "bottom10_GL_all = df_all_categories.nsmallest(7, 'GL')\n",
+    "\n",
+    "bottom10GI_and_GL_all = pd.concat([bottom10_GI_all, bottom10_GL_all]).drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "debfffc3-c873-4579-838d-1151bde8145a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>GI</th>\n",
+       "      <th>GL</th>\n",
+       "      <th>GI by level</th>\n",
+       "      <th>GL by level</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cream</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Dairy foods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Cream (30%)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Dairy foods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sour cream</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Dairy foods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cheese (Mozzarella, pressed cottage cheese, etc.)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Dairy foods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cheddar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Dairy foods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Mutton (Lamb)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Meats</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Boiled lamb</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Meats</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Kefir low-fat</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Dairy foods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Apple cider (brut)</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Beverages</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Red beet juice</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Beverages</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Name  GI   GL GI by level  \\\n",
+       "1                                               Cream   0  0.0         Low   \n",
+       "2                                         Cream (30%)   0  0.0         Low   \n",
+       "3                                          Sour cream   0  0.0         Low   \n",
+       "4   Cheese (Mozzarella, pressed cottage cheese, etc.)   0  0.0         Low   \n",
+       "5                                             Cheddar   0  0.0         Low   \n",
+       "6                                       Mutton (Lamb)   0  0.0         Low   \n",
+       "7                                         Boiled lamb   0  0.0         Low   \n",
+       "8                                       Kefir low-fat  25  0.0         Low   \n",
+       "9                                  Apple cider (brut)  40  0.0         Low   \n",
+       "10                                     Red beet juice  64  0.0        High   \n",
+       "\n",
+       "   GL by level     Category  \n",
+       "1          Low  Dairy foods  \n",
+       "2          Low  Dairy foods  \n",
+       "3          Low  Dairy foods  \n",
+       "4          Low  Dairy foods  \n",
+       "5          Low  Dairy foods  \n",
+       "6          Low        Meats  \n",
+       "7          Low        Meats  \n",
+       "8          Low  Dairy foods  \n",
+       "9          Low    Beverages  \n",
+       "10         Low    Beverages  "
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bottom10GI_and_GL_all = bottom10GI_and_GL_all.sort_values(by=['GI', 'GL'], ascending=[True, True])\n",
+    "bottom10GI_and_GL_all = bottom10GI_and_GL_all.reset_index(drop=True)\n",
+    "bottom10GI_and_GL_all.index = bottom10GI_and_GL_all.index + 1\n",
+    "bottom10GI_and_GL_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ca7f8f1-ffe2-4985-8d85-ee8b7dee1521",
    "metadata": {},
    "outputs": [],
    "source": []
