fix to all categories - charts + baked products category ready

--- a/GI and GL - webscraping.ipynb
+++ b/GI and GL - webscraping.ipynb
@@ -22392,10 +22392,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top10_GI_all = df_all_categories.nlargest(8, 'GI')\n",
-    "top10_GL_all = df_all_categories.nlargest(8, 'GL')\n",
+    "top10_GI_all = df_all_categories.nlargest(10, 'GI')\n",
+    "top10_GL_all = df_all_categories.nlargest(10, 'GL')\n",
     "\n",
-    "top10GI_and_GL_all = pd.concat([top10_GI_all, top10_GL_all]).drop_duplicates()"
+    "top10GI_and_GL_all = pd.concat([top10_GI_all, top10_GL_all]).drop_duplicates()\n",
+    "top10GI_and_GL_all = top10GI_and_GL_all.head(10)"
    ]
   },
   {
@@ -22497,18 +22498,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Maltodextrin</td>\n",
-       "      <td>95</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>High</td>\n",
-       "      <td>High</td>\n",
-       "      <td>Other foods</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
        "      <td>Potato flour (starch)</td>\n",
        "      <td>95</td>\n",
        "      <td>78.9</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Grains</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Rice flour</td>\n",
+       "      <td>95</td>\n",
+       "      <td>76.1</td>\n",
        "      <td>High</td>\n",
        "      <td>High</td>\n",
        "      <td>Grains</td>\n",
@@ -22524,41 +22525,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>Air rice (analogue of popcorn)</td>\n",
-       "      <td>85</td>\n",
-       "      <td>76.3</td>\n",
+       "      <td>Baked potato</td>\n",
+       "      <td>95</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>High</td>\n",
        "      <td>High</td>\n",
-       "      <td>Sweets</td>\n",
+       "      <td>Vegetables</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              Name   GI    GL GI by level GL by level  \\\n",
-       "1                Corn Syrup (Dark)  115  89.2        High        High   \n",
-       "2               Glucose (Dextrose)  100  95.0        High        High   \n",
-       "3                      Wheat syrup  100  78.0        High        High   \n",
-       "4                       Rice Syrup  100  77.0        High        High   \n",
-       "5                    Glucose syrup  100  70.5        High        High   \n",
-       "6                          Glucose   96  94.1        High        High   \n",
-       "7                     Maltodextrin   95  94.0        High        High   \n",
-       "8            Potato flour (starch)   95  78.9        High        High   \n",
-       "9                 Baguette (white)   95  46.5        High        High   \n",
-       "10  Air rice (analogue of popcorn)   85  76.3        High        High   \n",
-       "\n",
-       "          Category  \n",
-       "1           Sweets  \n",
-       "2           Sweets  \n",
-       "3           Sweets  \n",
-       "4           Sweets  \n",
-       "5           Sweets  \n",
-       "6           Sweets  \n",
-       "7      Other foods  \n",
-       "8           Grains  \n",
-       "9   Baked products  \n",
-       "10          Sweets  "
+       "                     Name   GI    GL GI by level GL by level        Category\n",
+       "1       Corn Syrup (Dark)  115  89.2        High        High          Sweets\n",
+       "2      Glucose (Dextrose)  100  95.0        High        High          Sweets\n",
+       "3             Wheat syrup  100  78.0        High        High          Sweets\n",
+       "4              Rice Syrup  100  77.0        High        High          Sweets\n",
+       "5           Glucose syrup  100  70.5        High        High          Sweets\n",
+       "6                 Glucose   96  94.1        High        High          Sweets\n",
+       "7   Potato flour (starch)   95  78.9        High        High          Grains\n",
+       "8              Rice flour   95  76.1        High        High          Grains\n",
+       "9        Baguette (white)   95  46.5        High        High  Baked products\n",
+       "10           Baked potato   95  20.0        High        High      Vegetables"
       ]
      },
      "execution_count": 83,
@@ -22567,7 +22556,7 @@
     }
    ],
    "source": [
-    "print(\"Top 10 GI and GL Values in all categories\")\n",
+    "print(\"Top 10 GI and GL Values in all categories\") #poki co nie widze lepszego sposobu na to\n",
     "top10GI_and_GL_all = top10GI_and_GL_all.sort_values(by=['GI', 'GL'], ascending=[False, False])\n",
     "top10GI_and_GL_all = top10GI_and_GL_all.reset_index(drop=True)\n",
     "top10GI_and_GL_all.index = top10GI_and_GL_all.index + 1\n",
@@ -22582,10 +22571,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bottom10_GI_all = df_all_categories.nsmallest(7, 'GI')\n",
-    "bottom10_GL_all = df_all_categories.nsmallest(7, 'GL')\n",
+    "bottom10_GI_all = df_all_categories.nsmallest(10, 'GI')\n",
+    "bottom10_GL_all = df_all_categories.nsmallest(10, 'GL')\n",
     "\n",
-    "bottom10GI_and_GL_all = pd.concat([bottom10_GI_all, bottom10_GL_all]).drop_duplicates()"
+    "bottom10GI_and_GL_all = pd.concat([bottom10_GI_all, bottom10_GL_all]).drop_duplicates()\n",
+    "bottom10GI_and_GL_all = bottom10GI_and_GL_all.head(10)"
    ]
   },
   {
@@ -22696,30 +22686,30 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Kefir low-fat</td>\n",
-       "      <td>25</td>\n",
+       "      <td>Ham, sliced, sausages</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Low</td>\n",
        "      <td>Low</td>\n",
-       "      <td>Dairy foods</td>\n",
+       "      <td>Meats</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Apple cider (brut)</td>\n",
-       "      <td>40</td>\n",
+       "      <td>Beef (steak, etc.)</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>Low</td>\n",
        "      <td>Low</td>\n",
-       "      <td>Beverages</td>\n",
+       "      <td>Meats</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>Red beet juice</td>\n",
-       "      <td>64</td>\n",
+       "      <td>Boiled lean beef</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>High</td>\n",
        "      <td>Low</td>\n",
-       "      <td>Beverages</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Meats</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -22734,9 +22724,9 @@
        "5                                             Cheddar   0  0.0         Low   \n",
        "6                                       Mutton (Lamb)   0  0.0         Low   \n",
        "7                                         Boiled lamb   0  0.0         Low   \n",
-       "8                                       Kefir low-fat  25  0.0         Low   \n",
-       "9                                  Apple cider (brut)  40  0.0         Low   \n",
-       "10                                     Red beet juice  64  0.0        High   \n",
+       "8                               Ham, sliced, sausages   0  0.0         Low   \n",
+       "9                                  Beef (steak, etc.)   0  0.0         Low   \n",
+       "10                                   Boiled lean beef   0  0.0         Low   \n",
        "\n",
        "   GL by level     Category  \n",
        "1          Low  Dairy foods  \n",
@@ -22746,9 +22736,9 @@
        "5          Low  Dairy foods  \n",
        "6          Low        Meats  \n",
        "7          Low        Meats  \n",
-       "8          Low  Dairy foods  \n",
-       "9          Low    Beverages  \n",
-       "10         Low    Beverages  "
+       "8          Low        Meats  \n",
+       "9          Low        Meats  \n",
+       "10         Low        Meats  "
       ]
      },
      "execution_count": 85,
@@ -22824,6 +22814,235 @@
     "plt.ylabel('Frequency')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "de554bd0-2c8c-4d4a-9e74-27243e8a1121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topGI_baked_products = df_baked_products.nlargest(3, 'GI')\n",
+    "topGL_baked_products = df_baked_products.nlargest(3, 'GL')\n",
+    "\n",
+    "topGI_and_GL_baked_products = pd.concat([topGI_baked_products, topGL_baked_products]).drop_duplicates()\n",
+    "topGI_and_GL_baked_products = topGI_and_GL_baked_products.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "f13d2697-e128-4e4b-a92a-434daad3fb3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 3 GI and GL Values in baked products category\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>GI</th>\n",
+       "      <th>GL</th>\n",
+       "      <th>GI by level</th>\n",
+       "      <th>GL by level</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Baguette (white)</td>\n",
+       "      <td>95</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Baked products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bakery products (wheat)</td>\n",
+       "      <td>90</td>\n",
+       "      <td>33.9</td>\n",
+       "      <td>High</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Baked products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gluten free white bread</td>\n",
+       "      <td>90</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>High</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>Baked products</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Name  GI    GL GI by level GL by level        Category\n",
+       "1         Baguette (white)  95  46.5        High        High  Baked products\n",
+       "2  Bakery products (wheat)  90  33.9        High        High  Baked products\n",
+       "3  Gluten free white bread  90  14.0        High    Moderate  Baked products"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Top 3 GI and GL Values in baked products category\")\n",
+    "topGI_and_GL_baked_products = topGI_and_GL_baked_products.sort_values(by=['GI', 'GL'], ascending=[False, False])\n",
+    "topGI_and_GL_baked_products = topGI_and_GL_baked_products.reset_index(drop=True)\n",
+    "topGI_and_GL_baked_products.index = topGI_and_GL_baked_products.index + 1\n",
+    "topGI_and_GL_baked_products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "8b0e5c69-122a-4a0a-81ed-563ad38a6481",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bottom_GI_baked_products = df_baked_products.nsmallest(3, 'GI')\n",
+    "bottom_GL_baked_products = df_baked_products.nsmallest(3, 'GL')\n",
+    "\n",
+    "bottomGI_and_GL_baked_products = pd.concat([bottom_GI_baked_products, bottom_GL_baked_products]).drop_duplicates()\n",
+    "bottomGI_and_GL_baked_products = bottomGI_and_GL_baked_products.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "3189f19b-ba18-4834-9191-ee75ae063c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bottom 3 GI and GL Values in baked products category\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>GI</th>\n",
+       "      <th>GL</th>\n",
+       "      <th>GI by level</th>\n",
+       "      <th>GL by level</th>\n",
+       "      <th>Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Germinated bread</td>\n",
+       "      <td>35</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>Baked products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Buckwheat pancakes</td>\n",
+       "      <td>40</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Baked products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Shortbread Cookies (Integral Flour, Sugar Free)</td>\n",
+       "      <td>40</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>Baked products</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Name  GI    GL GI by level  \\\n",
+       "1                                 Germinated bread  35  12.7         Low   \n",
+       "2                               Buckwheat pancakes  40   3.6         Low   \n",
+       "3  Shortbread Cookies (Integral Flour, Sugar Free)  40  17.2         Low   \n",
+       "\n",
+       "  GL by level        Category  \n",
+       "1    Moderate  Baked products  \n",
+       "2         Low  Baked products  \n",
+       "3    Moderate  Baked products  "
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Bottom 3 GI and GL Values in baked products category\")\n",
+    "bottomGI_and_GL_baked_products = bottomGI_and_GL_baked_products.sort_values(by=['GI', 'GL'], ascending=[True, True])\n",
+    "bottomGI_and_GL_baked_products = bottomGI_and_GL_baked_products.reset_index(drop=True)\n",
+    "bottomGI_and_GL_baked_products.index = bottomGI_and_GL_baked_products.index + 1\n",
+    "bottomGI_and_GL_baked_products"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81799685-7b46-4d7f-8e5d-832d20560f10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
