--- a/Healthy food analysis.ipynb
+++ b/Healthy food analysis.ipynb
@@ -3231,6 +3231,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5628f41e-7f11-4a2e-9962-654693261633",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Nutriscore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5467ff79-036d-49a2-84ab-04a5009bc3ff",
+   "metadata": {},
+   "source": [
+    "![Nutriscore Infoboard](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Nutri-score-A_light_background_logo.svg/2880px-Nutri-score-A_light_background_logo.svg.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "fe31a09d-a76e-4559-9ccb-326022f05eff",
    "metadata": {},
@@ -5072,6 +5090,25 @@
    "source": [
     "#NOVA-GROUP GRADE"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3ff5602-9680-4e15-aab8-6fe2d93e983f",
+   "metadata": {},
+   "source": [
+    "![NOVA GROUP GRADE 1 Infoboard](https://upload.wikimedia.org/wikipedia/commons/5/54/NOVA_group_1.svg)\n",
+    "![NOVA GROUP GRADE 2 Infoboard](https://upload.wikimedia.org/wikipedia/commons/a/ac/NOVA_group_2.svg)\n",
+    "![NOVA GROUP GRADE 3 Infoboard](https://upload.wikimedia.org/wikipedia/commons/2/26/NOVA_group_3.svg)\n",
+    "![NOVA GROUP GRADE 4 Infoboard](https://upload.wikimedia.org/wikipedia/commons/d/d3/NOVA_group_4.svg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "019d24a8-0e4d-4d1a-8456-996ff7c82dce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
